# janet-contracts-project

./: .env.example  .gitignore  GrantsAI_Procurement_PRDs.md  Grants_AI_Data_Integration_PRD_v1.2.2 (4).docx  Grants_AI_Matching_Report.docx  README_AZURE.md  alembic.ini  check_repo.py  debug_imports.py  demo_epic_completion.py  fetch_file.py  matching_results.xlsx  notice_sample.json  package-lock.json  pyproject.toml  read_repo_files.py  scan_sql.py  test_output.txt
.beads/: issues.jsonl
alembic/: env.py
alembic/versions/: 1a5a3a264329_add_bid_no_bid_fields.py  (+1 more)
app/: database.py  models.py
data/: fts_sample.json
docs/: azure-setup.md
infra/: main.bicep
scripts/: analyze_tier2_quality.py  api_backfill_2024.py  api_backfill_keyword.py  backfill_embeddings.py  backfill_ocds.py  check_db_sql.py  check_download_urls.py  check_download_urls_v2.py  check_persistence.py  check_profiles.py  debug_deep_review.py  debug_export_only.py  debug_historical_raw.py  debug_imports.py  debug_matching.py  debug_specific_tender.py  demo_analytics.py  demo_consortium.py  demo_rag_extraction.py  demo_renewal_intelligence.py  demo_renewal_radar.py  demo_social_value.py  download_fts_sample.py  embed_charities.py  evaluate_matches.py  exhaustive_url_probe.py  export_results.py  extract_fail_rationales.py  extract_sample.py  fast_gateway_export.py  find_ocds_links.py  fix_charity_profiles.py  fix_cpv_codes.py  fix_historical_final.py  generate_report.py  init_db.py  migrate_columns.py  prepare_backfill_db.py  probe_ocds_page.py  recalculate_shelter.py  (+10 more)
tests/: conftest.py
(+33 files in other folders)
